# FFLv2-jnihelper

./: CMakeLists.txt  JavaClass.cpp  JavaClass.hpp  JavaClassBase.cpp  JavaClassBase.hpp  JavaClassManager.cpp  JavaClassManager.hpp  JniBase.cpp  JniBase.hpp  JniHelper.hpp  readme.txt
include/: JavaClass.hpp  JavaClassBase.hpp  JavaClassManager.hpp  JniHelper.hpp
java/ffl/jnihelper/: JniBase.java
src/: JavaClass.cpp  JavaClassBase.cpp  JavaClassManager.cpp  JniBase.cpp  JniBase.hpp
